--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,29 @@
 ---
 title: "Introduction"
-description: "Welcome to the new home for your documentation"
+description: "Welcome to Klyme - The most powerful payment solution in real-time payments."
 ---
 
-## Setting up
+<Card
+  title="Create an account"
+  icon="user-plus"
+  href="https://klyme.io/contact/"
+  horizontal
+>
+  Request an account to start using Klyme
+</Card>
 
-Get your documentation site up and running in minutes.
+## What is Klyme?
+
+Klyme is an **embedded Open Banking** (often referred to as **Pay by Bank**) payment solution, that seamlessly integrates into your existing checkout without
+the unnecessary need of third-party redirects or hosted payment pages.
+
+- Putting **developers first** with our powerful **SDK**
+- Payment execution using only a **single API call**
+- Dedicated bank buttons for a **faster checkout experience**
+- Built-in **language translations**
+- Optimised **UI/UX** for all devices and browsers
+
+![klyme-widget-flow-example](https://storage.googleapis.com/klyme-misc/klyme-widget-flow.png)
 
 <Card
   title="Start here"
@@ -13,85 +31,5 @@ Get your documentation site up and running in minutes.
   href="/quickstart"
   horizontal
 >
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
+  Follow our two step quickstart guide.
 </Card>
