--- a/api-reference/endpoint/get.mdx
+++ b/api-reference/endpoint/get.mdx
@@ -1,4 +1,6 @@
 ---
-title: 'Get Plants'
-openapi: 'GET /plants'
+title: 'Get Payment Status'
+openapi: 'GET /payments/status'
 ---
+
+Once a payment is executed, its full payload, including its status can be retrieved using this endpoint.
