--- a/configuration/dedicated-bank-buttons.mdx
+++ b/configuration/dedicated-bank-buttons.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Dedicated Bank Buttons"
-description: "Enhance the checkout experience and improve conversions using dedicated banks buttons."
+description: "Enhance the checkout experience and improve conversions using dedicated banks buttons"
 icon: "building-columns"
 ---
 
