--- a/configuration/event-listeners.mdx
+++ b/configuration/event-listeners.mdx
@@ -1,6 +1,6 @@
 ---
 title: Event Listeners
-description: "Use event listeners to determine when the Klyme widget is opened or closed."
+description: "Use event listeners to determine when the Klyme widget is opened or closed"
 icon: "square-js"
 ---
 
