--- a/configuration/webhook-notifications.mdx
+++ b/configuration/webhook-notifications.mdx
@@ -1,6 +1,6 @@
 ---
 title: Webhook Notifications
-description: "How to receive webhook notificatinos for events."
+description: "How to receive webhook notificatinos for events"
 icon: "webhook"
 ---
 
