--- a/index.mdx
+++ b/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Introduction"
-description: "Welcome to Klyme - The most powerful payment solution in real-time payments."
+description: "Welcome to Klyme - The most powerful payment solution in real-time payments"
 ---
 
 <Card
@@ -9,18 +9,19 @@ description: "Welcome to Klyme - The most powerful payment solution in real-time
   href="https://klyme.io/contact/"
   horizontal
 >
-  Request an account to start using Klyme
+  Request an account to start using Klyme.
 </Card>
 
 ## What is Klyme?
 
-Klyme is an **embedded Open Banking** (often referred to as **Pay by Bank**) payment solution, that seamlessly integrates into your existing checkout without
-the unnecessary need of third-party redirects or hosted payment pages.
+Klyme is an **embedded Open Banking** (often referred to as **Pay by Bank**) payment solution, that seamlessly integrates into your existing checkout,
+eliminating the friction and outdated experience of third-party redirects and hosted payment pages.
 
 - Putting **developers first** with our powerful **SDK**
-- Payment execution using only a **single API call**
-- Dedicated bank buttons for a **faster checkout experience**
-- Built-in **language translations**
+- A **single API call** is all it takes to execute a payment
+- Give your customers a **faster checkout experience** using Dedicated Bank Buttons
+- Automated **Region Detection** to preload relevant banks
+- Enhanced accessibility with built-in **language translations**
 - Optimised **UI/UX** for all devices and browsers
 
 ![klyme-widget-flow-example](https://storage.googleapis.com/klyme-misc/klyme-widget-flow.png)
