--- a/resources/brand-assets.mdx
+++ b/resources/brand-assets.mdx
@@ -1,6 +1,6 @@
 ---
 title: Brand Assets
-description: "Klyme brand assets for your project."
+description: "Klyme brand assets for your project"
 icon: "files"
 ---
 
