--- a/resources/postman-collection.mdx
+++ b/resources/postman-collection.mdx
@@ -1,6 +1,6 @@
 ---
 title: Postman Collection
-description: "Postman collection for the Klyme API."
+description: "Postman collection for the Klyme API"
 icon: "server"
 ---
 
