--- a/resources/sandbox-bank-credentials.mdx
+++ b/resources/sandbox-bank-credentials.mdx
@@ -1,6 +1,6 @@
 ---
 title: Sandbox Bank Credentials
-description: "List of credentials for testing the Klyme API with sandbox banks."
+description: "List of credentials for testing the Klyme API with sandbox banks"
 icon: "note-sticky"
 ---
 
