--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Introduction'
-description: 'What you need to know before integrating.'
+description: 'What you need to know before integrating'
 ---
 
 ## Environments
