--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -97,9 +97,9 @@ When a user is redirected back to the specified `redirectUrl`, there will be  **
 
 You can use the `status` parameter to determine whether the payment was successful, failed or has gone into a pending state.
 
-- Status of `1` implies the payment flow has been successful and the funds have left the users bank account.
-- Status of `0` implies the payment was rejected or failed due to technical issues on the banks side.
-- Status of `2` implies the payment is in a pending state and the customers bank has further checks to complete before the payment is authorised.
+- Status `1` implies the payment flow has been successful and the funds have left the users bank account.
+- Status `0` implies the payment was rejected or failed due to technical issues on the banks side.
+- Status `2` implies the payment is in a pending state and the customers bank has further checks to complete before the payment is authorised.
 
 <Tip>You can learn more about Status Codes [here](/essentials/status-codes)</Tip>
 
