--- a/configuration/dedicated-bank-buttons.mdx
+++ b/configuration/dedicated-bank-buttons.mdx
@@ -5,7 +5,7 @@ icon: "building-columns"
 ---
 
 Dedicated bank buttons can be created and linked directly to their corresponding banks by 
-specifify a `bankId` when making the `/payment-auth-requests` call.
+specifify a `bankId` when making the [`Create Payment Authorisation`](api-reference/endpoint/create) call.
 
 Instead of a `uuid` being returned, an `authId` will be returned.
 
