--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -8,7 +8,7 @@ description: 'What you need to know before integrating'
 |                | **Klyme Widget SDK**            | **API Base URL**                 |
 | -------------- | ------------------------------- | -------------------------------- |
 | **Sandbox**    | https://widget.klyme.io/test.js | https://api-test.klyme.io/api/v1 |
-| **Production** | https://widget.klyme.io/test.js | https://api.klyme.io/api/v1      |
+| **Production** | https://widget.klyme.io/prod.js | https://api.klyme.io/api/v1      |
 
 ## Authentication
 
