Added iFrame warning

--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -36,6 +36,8 @@ Import the Klyme SDK into your project and add the Klyme HTML element, leaving t
 </html>
 ```
 
+<Warning>Do not place the Klyme HTML element within an iFrame. Banks set strict headers to prevent their pages or apps from being loaded when the request comes from within an iFrame.</Warning>
+
 **Language**
 
 The `lang` parameter is optional but can be used to preload the Klyme Widget with a specific language pre-selected by default.
