--- a/configuration/hosted-checkout.mdx
+++ b/configuration/hosted-checkout.mdx
@@ -12,7 +12,7 @@ the fastest and simplest way to get started.
 1. Call the [`Create Payment Authorisation`](api-reference/endpoint/create) endpoint to initiate a payment authorisation request and receive a unique `uuid`
 2. Redirect the customer to https://checkout.klyme.io?uuid={uuid} where `{uuid}` is the value of the `uuid` from Step 1
 
-<Tip>Klyme will handle the entire payment flow from here. here.</Tip>
+<Tip>Klyme will handle the entire payment flow from here.</Tip>
 
 ![hosted-checkout](https://storage.googleapis.com/klyme-misc/hosted-checkout.png)
 
