Added tip for hosted

--- a/configuration/hosted-checkout.mdx
+++ b/configuration/hosted-checkout.mdx
@@ -16,6 +16,8 @@ the fastest and simplest way to get started.
 
 ![hosted-checkout](https://storage.googleapis.com/klyme-misc/hosted-checkout.png)
 
+<Note>Each Hosted Checkout page is accessible only once for every unique `uuid` generated. Subsequent visits will automatically redirect the customer to the original referring URL.</Note>
+
 ### Sandbox
 
 When testing in our sandbox environment, be sure to include the `mode` query parameter and set its value to `test`.
