--- a/resources/status-codes.mdx
+++ b/resources/status-codes.mdx
@@ -192,8 +192,8 @@ It is the client’s responsibility to determine how these two status codes are 
 In certain cases, it’s important to identify when payments have settled; the `settlement` variable provides this information.
 
 - `COMPLETED` implies the payment has settled into the nominated bank account.
-- `PENDING` implies funds have left the customers account and is due to be settled.
-- `QUEUED` implies funds have not been released from the customers account as extra checks are being performed by their bank.
+- `PENDING` implies funds have left the customers account and are due to be settled.
+- `QUEUED` implies funds have not yet been released from the customers bank account as extra checks are being performed by the bank.
 - `FAILED` implies that settlement will not be taking place as the payment has been declined by the customers bank.
 
 <Note>The Settlement feature applies exclusively to EUR payments. In the UK, it is not needed due to payments being processed through the Faster Payments system.</Note>
